# glbasic

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
apps/cube/: CMakeLists.txt  cube.hpp  entry_point.cpp
assets/shaders/: basic_fragment_shader.shader  basic_vertex_shader.shader
glbasic/: CMakeLists.txt
glbasic/core/glbasic/: application.cpp  gl_debug.h  glbasic.h  imgui_layer.cpp  input.cpp  input.h  layer_stack.cpp  layer_stack.h  window_manager.cpp  window_manager.h
glbasic/core/glbasic/events/: key_event.h  window_event.h
glbasic/core/glbasic/renderer/: buffer.cpp  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  render_api.cpp  render_api.h  render_command.cpp  renderer.cpp  renderer.h  rendering_context.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_array.h
glbasic/core/glbasic/utils/: file_utils.cpp
glbasic/core/include/glbasic/: application.h  file_utils.h  key_codes.h  layer.h
glbasic/core/include/glbasic/events/: event.h  key_event.h  mouse_event.h  window_event.h
glbasic/core/include/glbasic/imgui/: imgui_layer.h
glbasic/core/include/glbasic/objects/: cube.h
glbasic/core/include/glbasic/renderer/: buffer.h  render_command.h  rendering_context.h  shader.h  texture.h
glbasic/core/src/: application.cpp  file_utils.cpp  imgui_layer.cpp  input.cpp  layer_stack.cpp  window_manager.cpp
glbasic/core/src/objects/: cube.cpp
glbasic/core/src/renderer/: buffer.cpp  camera.cpp  camera_controller.cpp  render_api.cpp  render_command.cpp  renderer.cpp  rendering_context.cpp  shader.cpp  texture.cpp  vertex_array.cpp
glbasic/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_debug_callback.cpp  opengl_debug_callback.h  opengl_render_api.cpp  opengl_render_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h
